# koi-core

./: .gitignore  CHANGELOG.md  README.md  cpu-tf.Dockerfile  cpu.Dockerfile  dockerfile  gpu.Dockerfile  koi-worker.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  pypi.yml  tagged-release.yml
koi_core/: __init__.py  api.py  caching.py  caching_persistence.py  caching_strategy.py  code_import.py  exceptions.py  worker.py
koi_core/api/: __init__.py  access.py  common.py  instance.py  model.py  role.py  sample.py  user.py
koi_core/control/: __init__.py  actions.py  control.py  runable_instance.py
koi_core/data/: __init__.py  simple_accessor.py  simple_batch_generator.py
koi_core/resources/: ids.py  instance.py  model.py  pool.py  role.py  sample.py  sample_instance_util.py  user.py
tests/: code_test.py  conftest.py  instance_test.py  integration_test.py  offline_mode_test.py  role_test.py  user_test.py
tests/fixtures/: api_mock.py  cleanup.py  common_data.py  handlers_common.py  handlers_instance.py  handlers_model.py  handlers_roles.py  handlers_user.py  testing_model.py
tests/fixtures/testing_model/: __model__.py
tests/fixtures/testing_model/additional_files/: sample.txt
